* Fri Jun 19 2020 Tobias Hopfgarten <repro@bisam97.de> 0.11.2
- https://github.com/Bisam97/GuiHactool/commit/96481b34d3ff637ded56ad0529a530dcf84cd77d
- https://github.com/Bisam97/GuiHactool/commit/58b055b3d8997e6ec6bfdb3d12fd7b8cb718964f

* Wed Jun 17 2020 Tobias Hopfgarten <repro@bisam97.de> 0.10.1
- https://github.com/Bisam97/GuiHactool/commit/8dd339193274936b034eddd798e5be34b55da5f6

* Wed Jun 17 2020 Tobias Hopfgarten <repro@bisam97.de> 0.9.2
- github.com/Bisam97/GuiHactool/commit/af85e77c6a5cd0426a944affe22cff32298030b3

* Tue Jun 16 2020 bisam97 <bisam97@Tobias-PC> 0.9.1

* Tue Jun 16 2020 bisam97 <bisam97@Tobias-PC> 0.9.0

* Tue Jun 16 2020 bisam97 <bisam97@Tobias-PC> 0.9.0
- Erstes Release
