@@ -14,7 +14,7 @@ Maintainer=Tobias Hopfgarten
 Address=repro@bisam97.de
 Url=home.bisam97.de
 License=General Public License
-PackageName=hactoolgui-0.11.2
+PackageName=hactoolgui-0.12.1
 Packager=1
 Systems=ubuntu
 Menus=ubuntu:"Games/Tools"
