@@ -1,3 +1,6 @@
+* Mon Jun 29 2020 Tobias Hopfgarten <repro@bisam97.de> 0.12.1
+- https://github.com/Bisam97/GuiHactool/commit/1a59a66e5c773374fb0c2dfa8597fed8240593b5
+
 * Fri Jun 19 2020 Tobias Hopfgarten <repro@bisam97.de> 0.11.2
 - https://github.com/Bisam97/GuiHactool/commit/96481b34d3ff637ded56ad0529a530dcf84cd77d
 - https://github.com/Bisam97/GuiHactool/commit/58b055b3d8997e6ec6bfdb3d12fd7b8cb718964f
